--- a/style.css
+++ b/style.css
@@ -1,137 +1,227 @@
 * {
-    padding: 0;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
-/* Container */
+body {
+    background-image: linear-gradient(rgb(54, 53, 53), rgb(0, 0, 0));
+    color: white;
+  }
+
 .container {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    margin: 3rem auto;
+    height: 80vh;
+    max-width: 220px;
+    border-radius: 0.75rem;
+    background-image: linear-gradient(rgb(73, 71, 71), rgb(10, 10, 10));
+}
+
+.container .nav {
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 264px;
-    height: 80vh;
-    margin: 40px auto;
-    border: 1px solid red;
+    width: 100%;
 }
 
+.container .nav p {
+    margin-left: 0.6rem;
+    padding: 0.5rem;
+    font-size: 0.8em;
+}
+
+.container .nav ul {
+    display: flex;
+    margin-right: 0.6rem;
+}
+
+.container .nav ul li {
+    list-style: none;
+    padding: 0.2rem;
+}
+
+.container .nav ul li i {
+    font-size: 0.7em;
+}
+
+/* Display */
 .container .display {
-    border: 2px solid black;
-    height: 20%;
-    width: 90%;
-    margin: 10px auto;
+    height: 25%;
+    width: 100%;
 }
 
+.container .display > * {
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    padding: 1rem;
+    color: rgb(158, 153, 153);
+}
+
+.container .display .solution {
+    font-size: 2em;
+}
+
+/* Buttons */
 .container .buttons {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: auto;
-    grid-gap: 1px;
-    width: 90%;
-    height: 70%;
-    margin: 0.5em auto;
+    grid-gap: 0.5rem;
+    height: 80%;
+    width: 100%;
+    padding: 1rem;
 }
 
-.buttons > * {
-    border-radius: 1.75rem;
+.button {
+    border-radius: 0.75em;
+    color: white;
 }
 
 .on {
-    grid-column: 5;
+    grid-column: 4;
     grid-row: 1;
+    background: rgb(20, 20, 20);
 }
 
-.one {
+.clear {
     grid-column: 1;
-    grid-row: 4 / 5;
+    grid-row: 2;
+    background: orange;
 }
 
-.two {
-    grid-column: 2 / 3;
-    grid-row: 4 / 5;
-}
-
-.three {
-    grid-column: 3 / 4;
-    grid-row: 4 / 5;
-}
-
-.four {
-    grid-column: 1;
-    grid-row: 3 / 4;
-}
-
-.five {
+.open-b {
     grid-column: 2;
-    grid-row: 3 / 4;
+    grid-row: 2;
+    background: rgb(230, 182, 95);
 }
 
-.six {
+.close-b {
     grid-column: 3;
-    grid-row: 3 / 4;
+    grid-row: 2;
+    background: rgb(230, 182, 95);
 }
 
-.seven {
-    grid-column: 1;
-    grid-row: 2 / 3;
-}
-
-.eight {
-    grid-column: 2;
-    grid-row: 2 / 3;
-}
-.nine {
-    grid-column: 3;
-    grid-row: 2 / 3;
-}
-
-.zero {
-    grid-column: 1;
-    grid-row: 5;
-}
-
-.zero2 {
-    grid-column: 2;
-    grid-row: 5;
-}
-
-.dot {
-    grid-column: 3;
-    grid-row: 5;
-}
-
-.equal {
-    grid-column: 5;
-    grid-row: 4 / 6;
-}
-
-.add {
+.times {
     grid-column: 4;
-    grid-row: 5;
+    grid-row: 2;
+    background: rgb(105, 2, 105);
 }
 
-.minus {
-    grid-column: 4;
-    grid-row: 4;
+.power {
+    grid-column: 1;
+    grid-row: 3;
+    background: rgb(230, 182, 95);
+}
+
+.percent {
+    grid-column: 2;
+    grid-row: 3;
+    background: rgb(230, 182, 95);
+}
+
+.random {
+    grid-column: 3;
+    grid-row: 3;
+    background: rgb(230, 182, 95);
 }
 
 .divide {
     grid-column: 4;
     grid-row: 3;
+    background: rgb(105, 2, 105);
 }
 
-.multiply {
-    grid-column: 5;
-    grid-row: 3;
+.seven {
+    grid-column: 1;
+    grid-row: 4;
+    background: rgb(58, 57, 57);
 }
 
-.clear {
+.eight {
+    grid-column: 2;
+    grid-row: 4;
+    background: rgb(58, 57, 57);
+}
+
+.nine {
+    grid-column: 3;
+    grid-row: 4;
+    background: rgb(58, 57, 57);
+}
+
+.minus {
     grid-column: 4;
-    grid-row: 2;
+    grid-row: 4;
+    background: rgb(105, 2, 105);
 }
 
-.del {
-    grid-column: 5;
-    grid-row: 2;
+.four {
+    grid-column: 1;
+    grid-row: 5;
+    background: rgb(58, 57, 57);
+}
+
+.five {
+    grid-column: 2;
+    grid-row: 5;
+    background: rgb(58, 57, 57);
+}
+
+.six {
+    grid-column: 3;
+    grid-row: 5;
+    background: rgb(58, 57, 57);
+}
+
+.plus {
+    grid-column: 4;
+    grid-row: 5;
+    background: rgb(105, 2, 105);
+}
+
+.one {
+    grid-column: 1;
+    grid-row: 6;
+    background: rgb(58, 57, 57);
+}
+
+.two {
+    grid-column: 2;
+    grid-row: 6;
+    background: rgb(58, 57, 57);
+}
+
+.three {
+    grid-column: 3;
+    grid-row: 6;
+    background: rgb(58, 57, 57);
+}
+
+.equal {
+    grid-column: 4;
+    grid-row: 6 / 8;
+    background: rgb(187, 16, 187);
+}
+
+.dot {
+    grid-column: 1;
+    grid-row: 7;
+    background: rgb(58, 57, 57);
+}
+
+.zero {
+    grid-column: 2;
+    grid-row: 7;
+    background: rgb(58, 57, 57);
+}
+
+.delete {
+    grid-column: 3;
+    grid-row: 7;
+    background: rgb(20, 20, 20);
 }
