--- a/style.css
+++ b/style.css
@@ -8,8 +8,15 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-image: linear-gradient(rgb(54, 53, 53), rgb(0, 0, 0));
     color: white;
-  }
+}
 
+/* Utility Class */
+.green {
+    background: rgb(14, 177, 14);
+}
+
+
+/* Body */
 .container {
     display: flex;
     flex-direction: column;
