--- a/style.css
+++ b/style.css
@@ -10,11 +10,6 @@ body {
     color: white;
 }
 
-/* Utility Class */
-.green {
-    background: rgb(14, 177, 14);
-}
-
 
 /* Body */
 .container {
@@ -93,7 +88,8 @@ body {
 .on {
     grid-column: 4;
     grid-row: 1;
-    background: rgb(173, 18, 18);
+    background-color: rgb(173, 18, 18);
+    border-radius: 0.25rem;
 }
 
 .clear {
@@ -232,4 +228,8 @@ body {
     grid-column: 3;
     grid-row: 7;
     background: rgb(20, 20, 20);
+}
+
+.green {
+    background: rgb(14, 177, 14);
 }
